test/error/ast/CaseLabelLeftNotLessRight.mod
MODULE CaseLabelLeftNotLessRight;
VAR x: INTEGER;
BEGIN
  CASE x OF
    5 .. 2:
  END;
END CaseLabelLeftNotLessRight.
